force-app/main/default/objects/Apttus_Billing__Payment__c/Apttus_Billing__Payment__c.object-meta.xml
<CustomObject>
    <description>Represents a payment.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PMT-{00000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>