force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ExternalSystemId__c</fullName>
    <description>The payment Id as stored in the extern system</description>
    <externalId>true</externalId>
    <inlineHelpText>The payment Id as stored in the extern system</inlineHelpText>
    <label>External System Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>