force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__ExternalSystemStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ExternalSystemStatus__c</fullName>
    <description>the status of the payment in the external system</description>
    <inlineHelpText>the status of the payment in the external system</inlineHelpText>
    <label>External System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>