force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__OrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated order.</description>
    <inlineHelpText>The associated order.</inlineHelpText>
    <label>Order Id</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>