force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentAmount__c</fullName>
    <description>The total amount of a payment.</description>
    <inlineHelpText>The total amount of a payment.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>