force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentDate__c</fullName>
    <description>the date of a payment</description>
    <inlineHelpText>the date of a payment</inlineHelpText>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>