force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__PaymentNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentNumber__c</fullName>
    <description>The Custom Payment Number.</description>
    <inlineHelpText>The Custom Payment Number.</inlineHelpText>
    <label>Payment Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>