force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentStatus__c</fullName>
    <description>Shows if a payment is partially applied, unapplied or fully applied</description>
    <inlineHelpText>Shows if a payment is partially applied, unapplied or fully applied</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unapplied</fullName>
            </value>
            <value>
                <fullName>Partially applied</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>