force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReasonCode__c</fullName>
    <description>Reason code for payment</description>
    <inlineHelpText>Reason code for payment</inlineHelpText>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>