force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__ReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReasonDescription__c</fullName>
    <description>Reason Description for payment</description>
    <inlineHelpText>Reason Description for payment</inlineHelpText>
    <label>Reason Description</label>
    <type>TextArea</type>
</CustomField>