force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__Source__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Source__c</fullName>
    <description>The source of the payment.</description>
    <inlineHelpText>The source of the payment.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>