force-app/main/default/objects/Apttus_Billing__Payment__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>the status of the payment</description>
    <inlineHelpText>the status of the payment</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>